完善结果导出转换代码